--- a/versiondialog.ui
+++ b/versiondialog.ui
@@ -14,35 +14,35 @@
    <string>Texmaker</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="1">
+   <item row="1" column="1">
     <widget class="QLineEdit" name="lineEditCurrent">
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="2" column="0">
     <widget class="QLabel" name="labelAvailable">
      <property name="text">
       <string>Available version</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
+   <item row="1" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
       <string>You're using the version</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="2" column="1">
     <widget class="QLineEdit" name="lineEditAvailable">
      <property name="readOnly">
       <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="1" column="2">
+   <item row="2" column="2">
     <widget class="QPushButton" name="pushButtonCheck">
      <property name="minimumSize">
       <size>
@@ -65,14 +65,14 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="3">
+   <item row="3" column="0" colspan="3">
     <widget class="QPushButton" name="pushButtonDownload">
      <property name="text">
       <string>Go to the download page</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="0" colspan="3">
+   <item row="5" column="0" colspan="3">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -85,7 +85,7 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="3">
+   <item row="4" column="0" colspan="3">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -98,7 +98,7 @@
      </property>
     </spacer>
    </item>
-   <item row="0" column="2">
+   <item row="1" column="2">
     <widget class="QLabel" name="labelAvailableIsUpToDate">
      <property name="enabled">
       <bool>true</bool>
@@ -123,6 +123,13 @@
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0" colspan="3">
+    <widget class="QLabel" name="labelUpdateStatus">
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </item>
